--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,14 @@
 # Get your OpenAI API Key here: https://platform.openai.com/account/api-keys
-OPENAI_API_KEY=****
+OPENAI_API_KEY=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
 
 # Generate a random secret: https://generate-secret.vercel.app/32 or `openssl rand -base64 32`
-AUTH_SECRET=****
+AUTH_SECRET=2084be56b3f9f680589733aeee78f36f
 
 # The following keys below are automatically created and
 # added to your environment when you deploy on vercel
 
 # Instructions to create a Vercel Blob Store here: https://vercel.com/docs/storage/vercel-blob
-BLOB_READ_WRITE_TOKEN=****
+BLOB_READ_WRITE_TOKEN=vercel_blob_rw_TixM7Waql4LZx4Eo_bPiWm1xHZ5Lt22OOJMyDhGb36yqvmA
 
 # Instructions to create a database here: https://vercel.com/docs/storage/vercel-postgres/quickstart
-POSTGRES_URL=****
+POSTGRES_URL=postgres://neondb_owner:HRm3IT1FwePS@ep-bold-breeze-a1hjp07f-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require
